--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2af4c949-f7fd-4299-9055-2dd13e861a59"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
